--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
     <title>Delote-Beauty</title>
   </head>
   <body>
@@ -22,6 +22,6 @@
     
     @@include("./chunks/footer.html")
 
-    <script src="./js/main.js"></script>
+    <script src="./js/main.min.js"></script>
   </body>
 </html>
