--- a/src/html/chunks/about.html
+++ b/src/html/chunks/about.html
@@ -3,16 +3,13 @@
 
   <div class="about__text">
     <p class="about__text__element">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. In arcu nibh
-      vitae amet. Ipsum, pharetra donec ornare velit. Id at quisque accumsan
-      risus ac ipsum ut. Sit elit, facilisi proin non malesuada sociis
-      tristique. Viverra augue lorem ut quisque quam tortor, malesuada iaculis.
+      Салон Красоты осуществляет свою деятельность в соответствии с действующим
+      законодательством Российской Федерации, имеет медицинскую лицензию,
+      сертификат безопасности 1-Touch.
     </p>
 
     <p class="about__text__element">
-      Et elementum at nulla venenatis, faucibus integer. Auctor neque eros,
-      viverra rutrum. Fames ultrices condimentum tortor nec penatibus. Velit
-      imperdiet sapien fringilla vestibulum sit fames.
+      Мы создаем атмосферу любви и заботы для каждого гостя!
     </p>
   </div>
 </section>
