--- a/src/html/chunks/menu.html
+++ b/src/html/chunks/menu.html
@@ -5,10 +5,11 @@
   </button>
 
   <p class="menu__text">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ipsum, adipiscing
-    amet in egestas sem dui, arcu faucibus scelerisque. Nisl est felis id
-    volutpat. Sed dolor fermentum amet lectus nibh quis. Tortor donec
-    pellentesque leo ac placerat. Morbi.
+    У нас самый высокий сервис, система акции и постоянно действующих скидок.
+    Для гостей салона предоставляются процедуры косметологии, услуги
+    парикмахерского зала, уходы для тела, визаж, маникюр и педикюр. Возле салона
+    предусмотрена удобная гостевая парковка. Также одним из главных наших
+    преимуществ является наша кофейня.
   </p>
 
   <div class="menu__contacts">
