--- a/src/html/chunks/cosmetics.html
+++ b/src/html/chunks/cosmetics.html
@@ -1,17 +1,17 @@
-<section class="cosmetics">
+<section class="cosmetics" id="cosmetics">
   <div class="cosmetics__element">
-    <img src="" alt="" class="cosmetics__element__img" />
+    <img src="./img/cosmetics-1.svg" alt="" class="cosmetics__element__img" />
   </div>
 
   <div class="cosmetics__element">
-    <img src="" alt="" class="cosmetics__element__img" />
+    <img src="./img/cosmetics-2.svg" alt="" class="cosmetics__element__img" />
   </div>
 
   <div class="cosmetics__element">
-    <img src="" alt="" class="cosmetics__element__img" />
+    <img src="./img/cosmetics-3.svg" alt="" class="cosmetics__element__img" />
   </div>
 
   <div class="cosmetics__element">
-    <img src="" alt="" class="cosmetics__element__img" />
+    <img src="./img/cosmetics-4.svg" alt="" class="cosmetics__element__img" />
   </div>
 </section>
