--- a/src/html/chunks/header.html
+++ b/src/html/chunks/header.html
@@ -3,7 +3,7 @@
     <div class="header__content">
       @@include('./nav.html')
 
-      <h1 class="header__content__title">Салон красоты «Delote-Beauty»</h1>
+      <h1 class="header__content__title">Салон красоты Gloss</h1>
     </div>
   </div>
 </header>
