--- a/src/html/chunks/nav.html
+++ b/src/html/chunks/nav.html
@@ -1,15 +1,15 @@
 <nav class="nav">
-  <img src="" alt="" class="nav__inst" />
+  <a href="https://instagram.com/ml.isss?igshid=YmMyMTA2M2Y="><img src="./img/insta.svg" alt="" class="nav__inst" /></a>
 
-  <a href="" class="nav__link">О нас</a>
+  <a href="#about" class="nav__link">О нас</a>
 
-  <a href="" class="nav__link">Наши услуги</a>
+  <a href="#services" class="nav__link">Наши услуги</a>
 
-  <img src="" alt="" class="nav__logo" />
+  <img src="./img/logo.svg" alt="" class="nav__logo" />
 
-  <a href="" class="nav__link">Поставщики</a>
+  <a href="#cosmetics" class="nav__link">Поставщики</a>
 
-  <a href="" class="nav__link">Наши работы</a>
+  <a href="#works" class="nav__link">Наши работы</a>
 
   <button class="nav__menu">
     <span></span>
