--- a/src/html/chunks/services.html
+++ b/src/html/chunks/services.html
@@ -1,11 +1,15 @@
-<section class="services">
+<section class="services" id="services">
   <div class="services__elements">
     <div class="services__elements__element">
       <div class="services__elements__element__img">
         <img src="./img/services-1.png" alt="" />
       </div>
 
-      <p>Парикмахерские услуги</p>
+      <div class="services__elements__element__text">
+        <p>Парикмахерские услуги</p>
+
+        <img src="./img/icon6.svg" alt="" />
+      </div>
     </div>
 
     <div class="services__elements__element">
@@ -13,7 +17,11 @@
         <img src="./img/services-2.png" alt="" />
       </div>
 
-      <p>Маникюр</p>
+      <div class="services__elements__element__text">
+        <p>Маникюр</p>
+
+        <img src="./img/icon4.svg" alt="" />
+      </div>
     </div>
 
     <div class="services__elements__element">
@@ -21,7 +29,11 @@
         <img src="./img/services-3.png" alt="" />
       </div>
 
-      <p>Педикюр</p>
+      <div class="services__elements__element__text">
+        <p>Педикюр</p>
+
+        <img src="./img/icon5.svg" alt="" />
+      </div>
     </div>
 
     <div class="services__elements__element">
@@ -29,7 +41,11 @@
         <img src="./img/services-4.png" alt="" />
       </div>
 
-      <p>Косметология</p>
+      <div class="services__elements__element__text">
+        <p>Косметология</p>
+
+        <img src="./img/icon1.svg" alt="" />
+      </div>
     </div>
 
     <div class="services__elements__element">
@@ -37,15 +53,22 @@
         <img src="./img/services-5.png" alt="" />
       </div>
 
-      <p>Эстетист по телу</p>
+      <div class="services__elements__element__text">
+        <p>Эстетист по телу</p>
+
+        <img src="./img/icon2.svg" alt="" />
+      </div>
     </div>
 
     <div class="services__elements__element">
       <div class="services__elements__element__img">
         <img src="./img/services-6.png" alt="" />
       </div>
+      <div class="services__elements__element__text">
+        <p>Визаж</p>
 
-      <p>Визаж</p>
+        <img src="./img/icon3.svg" alt="" />
+      </div>
     </div>
   </div>
 </section>
