--- a/src/html/chunks/about.html
+++ b/src/html/chunks/about.html
@@ -1,4 +1,4 @@
-<section class="about">
+<section class="about" id="about">
   <img src="" alt="" class="about__img" />
 
   <div class="about__text">
