--- a/src/html/chunks/footer.html
+++ b/src/html/chunks/footer.html
@@ -1,7 +1,7 @@
 <footer>
   <div class="container">
     <div class="footer__content">
-      <img src="" alt="" class="footer__content__img" />
+      <img src="./img/logo.svg" alt="" class="footer__content__img" />
 
       <div class="footer__content__contacts">
         <h2 class="footer__content__contacts__title">Контакты</h2>
@@ -30,7 +30,7 @@
       <div class="footer__content__instagram">
         <h2 class="footer__content__instagram__title">Мы в Instagram</h2>
 
-        <img src="" alt="" class="footer__content__instagram__img">
+        <a href="https://instagram.com/ml.isss?igshid=YmMyMTA2M2Y="><img src="./img/insta.svg" alt="" class="footer__content__instagram__img"/></a>
       </div>
     </div>
 
