--- a/src/html/chunks/works.html
+++ b/src/html/chunks/works.html
@@ -1,4 +1,4 @@
-<section class="works">
+<section class="works" id="works">
   <h2 class="works__title">Наши работы</h2>
 
   <div class="works__images">
