--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/main.min.css" />
-    <title>Delote-Beauty</title>
+    <title>Gloss</title>
   </head>
   <body>
     @@include("./chunks/menu.html") 
